# crow

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Crow.entitlements  LICENSE  Makefile  Package.swift  README.md  SECURITY.md  mise.toml
.github/workflows/: cache-warm.yml  ci.yml  release.yml
Resources/: AGENTS.md.template  CLAUDE.md.template  crow-attribution-FOOTER.md.template  crow-batch-workspace-SKILL.md.template  crow-create-ticket-SKILL.md.template  crow-image-command.md.template  crow-review-pr-SKILL.md.template  crow-workspace-SKILL.md.template  crow-workspace-setup.sh.template
Sources/crowd/: main.swift
Tests/CrowTests/: AttributionSkillTests.swift  CommandLaunchesTokenTests.swift  CustomInstructionsSkillTests.swift  DeferredLaunchTests.swift  FeatureFlagsTests.swift  IssueTrackerAutoMergeTests.swift  IssueTrackerAutoRebaseTests.swift  IssueTrackerCompletionTests.swift  IssueTrackerDedupTests.swift  IssueTrackerGitLabDoneTests.swift  IssueTrackerReworkTests.swift  (+21 more)
crow-desktop/: README.md  package-lock.json  package.json
crow-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
crow-desktop/src-tauri/capabilities/: default.json
crow-desktop/src-tauri/icons/: icon.icns
crow-desktop/src-tauri/src/: lib.rs  main.rs
docs/: agent-harness-gap-audit.md  agent-harness-matrix.md  architecture.md  automation.md  cli-reference.md  configuration.md  getting-started.md  terminal-runtime-research.md  troubleshooting.md
scripts/: build-ghostty.sh  bundle.sh  check-notification-events.sh  crowd-dev.sh  generate-build-info.sh
(+45 files in other folders)
